tests/array_type_const_expr_bad_nonconst.stderr
tests/array_type_const_expr_bad_nonconst.sl:4:13: error: SL2054: array length must be a const integer expression: identifier is not a const value in this context
