tests/array_type_const_expr_bad_nonconst.sl
fn main() {
	var n i32 = 4
	var a [i32 n]
	_ = a
}
